config-root/namespaces/jx-staging/python-31stjan/python-31stjan-svc.yaml
# Source: python-31stjan/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-31stjan
  labels:
    chart: "python-31stjan-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: python-31stjan-python-31stjan
